# Space-Bots

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  architecture.excalidraw  archive.aseprite  atlas.aseprite  atlas.tsx  commands.gdb  flake.nix  full.tsx  ground.tsx  init_game_state.py  map.tiled-session  map.tmx  orchestrator.py  orchistrator.py  player1_script.py  player2_out  player2_script.cpp  player_code_runner.cpp  player_code_runner.py  rules.tmx  test.py
.github/workflows/: cmake-multi-platform.yml
archive/new_netcode/server/: networking.py  orchestrator.py
archive/server/player0_cpp/: engorged_tick.h  famished_tick.h
archive/server/player0_py/: dung_beetle.py  foraging_maggot.py  plague_bat.py
archive/server/player1_cpp/: acid_ant.cpp  bloated_bedbug.h  dung_beetle.cpp
archive/server/player1_py/: mawing_beaver.py  spider.py
archive/steamgame_linux/: build.sh  steam.py
archive/v1/server/: game_engine.py  orchestrator.py  player1_out  player_code_runner.py
archive/v1/server/player0_cpp/: tunneling_mole.h
archive/v1/server/player0_py/: rhino_beetle.py
archive/v1/server/player1_cpp/: acid_ant.h  foraging_maggot.h  infected_mouse.cpp  mantis.h  plague_bat.h  spider.cpp  tunneling_mole.cpp
archive/v1/steamgame_linux/steamworks/: methods.py
archive/v2/map/: atlas.tsx  atlas2x3.tsx  map.tiled-session  map.tmx  rules.tmx
client/: .gitignore  CMakeLists.txt  a.out  build.sh  client.py  compile_commands.json  flake.nix  makefile  pack.sh  prep_models  prep_models.cpp  resources.rrp
client/.cache/clangd/index/: gui_layout_name.h.3DF40EEEDA11C3CA.idx  main.c.D3052BEB542F1942.idx  raygui.h.5A95A5AFA7F5D680.idx  raygui.h.C51FB47C87443A7A.idx  raylib.h.5A7F9D6B5033125A.idx  raylib.h.F9C7C71B6B59E446.idx  style.h.D4D32A495C99D3B9.idx
client/assets/: atlas.aseprite  atlas.tsx  atlas2x3.tsx  atlas4x4.tsx  map.tiled-session  map.tmx  rules.tmx
client/libs/: utils_client.cpp  utils_client.h
client/libs/rrespacker/: Readme.txt
client/resources/: icons.rgi
client/resources/guis/: main_menu.rgl  settings.rgl
client/resources/models/: rover.glb  rover_body.glb  rover_scan.glb  rover_wheel.glb
client/resources/packed/: rover.glb
client/resources/unpacked/: icons.rgi
client/src/: client.cpp  client.h  client_old.cpp  game.cpp  game.hpp  game_state.h  game_state.hpp  gui.h  gui.rgl  icons.rgi  main.cpp  main_menu.cpp  main_menu.h  main_test.cpp  style.rgs  utils.h
client/src/guis/: main_menu.cpp  main_menu.h  settings.cpp  settings_menu.cpp  settings_menu.h
client/src/styles/: ashes.rgs
fresh_sprites/premium asset pack/Premium Vermin Animations/Buzzing Bumblebee/: BuzzingBumblebee.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Diseased Fly/: DiseasedFly.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Emerald Viper/: EmeraldViper.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Fire Centipede/: FireCentipede.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Gaping Leech/: GapingLeech.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Mischievous Racoon/: MischievousRacoon.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Overgrown Earthworm/: OvergrownEarthworm.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Ravenous Mosquito/: RavenousMosquito.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Rummaging Opossum/: RummagingOpossum.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Sand Cobra/: SandCobra.aseprite
fresh_sprites/premium asset pack/Premium Vermin Animations/Scavenging Coyote/: ScavengingCoyote.aseprite
godot/: project.godot
godot/assets/: icon.svg.import
godot/assets/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
godot/assets/music/: time_for_adventure.mp3.import
godot/assets/sounds/: coin.wav.import  explosion.wav.import  hurt.wav.import  jump.wav.import  power_up.wav.import  tap.wav.import
godot/assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
godot/scenes/: coin.tscn  game.tscn  kill_zone.tscn  platform.tscn  player.tscn
libs/: utils.cpp  utils.h  utils_benchmark.cpp  utils_performance_test.cpp  utils_test.cpp  utils_test.h
new_netcode/: game_object.py  networking.py  orchestrator.py
player0/: knight.py
player1/: knight.cpp  knight.py
player2/: knight.cpp  knight.h
python/new_netcode/server/: flake.nix  game_object.py
python/server/: player_code_runner.cpp
python/server/player0_cpp/: plague_bat.cpp  tainted_cockroach.h
python/server/player0_py/: tainted_cockroach.py  tunneling_mole.py
python/server/player1_cpp/: bloated_bedbug.cpp  dung_beetle.h  lava_ant.cpp  spider.h
python/server/player1_py/: famished_tick.py  infected_mouse.py  mantis.py  rhino_beetle.py  swooping_bat.py
python/steamgame_linux/: flake.nix  game.py
python/steamgame_windows/: steam.py
server/: .gitignore  CMakeLists.txt  build.sh  flake.nix  game_engine.py  game_engine2.py  init_game_state.py  orchestrator.py  player0_out  player1_out  player_code_runner.cpp  player_code_runner.py
server/map/: map.tiled-session  map.tmx
server/player0/: knight.py
server/player0_cpp/: famished_tick.cpp  foraging_maggot.cpp  mantis.cpp  mawing_beaver.h  rhino_beetle.h
server/player0_py/: engorged_tick.py  rhino_beetle.py
server/player1/: infected_mouse.h  knight.h  lava_ant.h  tainted_cockroach.cpp
server/player1_cpp/: engorged_tick.cpp  mawing_beaver.cpp  rhino_beetle.cpp  swooping_bat.cpp  swooping_bat.h
server/player1_py/: acid_ant.py  bloated_bedbug.py  lava_ant.py
server/src/: game_state.h  main.cpp  orchistrator.cpp  orchistrator.h  server.cpp  utils.h
src_models/: rover.blend  rover.blend1
steamgame/: flake.nix  steam.py  steam_appid.txt
steamgame/steamworks/interfaces/: userstats.py
steamgame_windows/: game.py
(+19 files in other folders)
